--- a/Documentation/Conditional Statements.html
+++ b/Documentation/Conditional Statements.html
@@ -7,6 +7,36 @@
             IF Statement:
         </h4>
         <p>
+            <h5>Notes:</h5>
+            <p>
+                Else blocks are optional, but if you use an else block, you must use an if block.
+                Else blocks must also be placed on a separate line from the closing curly bracket of the if block.
+            </p>
+            Conditional Statement Evaluation is done using the following operators:
+            <table>
+                <tr>
+                    <th>Operator</th>
+                    <th>Meaning</th>
+                </tr>
+                <tr>
+                    <td>=</td>
+                    <td>Equal To (Does Not assign values when in a conditional statement)</td>
+                </tr>
+                <tr>
+                    <td>!</td>
+                    <td>Not Equal To</td>
+                </tr>
+                <tr>
+                    <td>></td>
+                    <td>Greater Than</td>
+                </tr>
+                <tr>
+                    <td><</td>
+                    <td>Less Than</td>
+                </tr>
+            </table>
+        </p>
+        <p>
             <h5>Parameters</h5>
             <ul>
                 <li>string condition: The condition to be evaluated.</li>
@@ -20,6 +50,15 @@
                     print("You are an adult!");<br>
                 }
             </code>
+        <h5>Example: </h5>
+        <code>
+            if (age > 18) {<br>
+            print("You are an adult!");<br>
+            }<br>
+            else {<br>
+            print("You are not an adult!");<br>
+            }
+        </code>
         </p>
     </body>
 </html>
